# gb-emu

./: .gitignore  CMakeLists.txt  Makefile  README.md
documentation/: CMakeLists.txt
include/catch2/: test_memory_space.hpp  tests.hpp
include/implementations/default/: console_renderer.hpp  null_mmu_decorator.hpp  null_synthesizer.hpp
include/lib/: gameboy.hpp  timer_handler.hpp
include/lib/audio/: synthesizer.hpp
include/lib/cpu/: cpu.hpp  flags.hpp  instructions.hpp  interrupt.hpp  interrupt_handler.hpp  interrupt_mediator.hpp  registers.hpp  speed_mode.hpp  speedmode_handler.hpp  state.hpp
include/lib/graphic/: lcd_handler.hpp  lcd_mode.hpp  lcd_status_util.hpp  obj_composition.hpp  ppu.hpp  renderer.hpp
include/lib/memory/: cgb_unused_memory_fea0_feff.hpp  cgb_vram.hpp  cgb_working_ram.hpp  high_ram.hpp  io_registers.hpp  memory_location.hpp  memory_space.hpp  memory_space_decorator.hpp  mmu.hpp  mmu_factory.hpp  oam.hpp  unused_memory_fea0_feff.hpp  vram.hpp  working_ram.hpp
include/lib/timer/: set_tac_auditor.hpp  timer_handler.hpp  timer_mediator.hpp  timer_util.hpp
include/lib/util/: bit_util.hpp
source/: main.cpp
source/implementations/default/: console_renderer.cpp  null_mmu_decorator.cpp  null_synthesizer.cpp
source/lib/: gameboy.cpp  timer_handler.cpp
source/lib/cpu/: cpu.cpp  flags.cpp  instructions.cpp  interrupt_handler.cpp  interrupt_mediator.cpp  registers.cpp  (+1 more)
source/tests/: test_main.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt  test_memory_space.hpp
test/source/: greeter.cpp
(+140 files in other folders)
